Fixed the text getting squished on mobile. I think I will add a media query because on desktop it now looks too spread out.

--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -476,7 +476,7 @@
 
 	.content
 	{
-		padding: 0em 8em;
+		
 	}
 
 
